oriterm_core/tests/vttest/snapshots/vttest__menu6__97x33_06_sub2_02.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Test of LineFeed/NewLine mode.                                                                   
                                                                                                 
NewLine mode set. Push the RETURN key:                                                           
 <13> <10>  -- OK                                                                                
                                                                                                 
NewLine mode reset. Push the RETURN key:
