oriterm_core/tests/vttest/snapshots/vttest__menu6__97x33_06_sub4_01.snap
---
source: oriterm_core/tests/vttest/menu6.rs
expression: text
---
Test of Device Attributes report (what are you)                                                  
                                                                                                 
Report is: <27> [ ? 6 4 ; 6 ; 4 c  VT400 family                                                  
    6 = selective erase                                                                          
    4 = Sixel graphics                                                                           
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
                                                                                                 
Push <RETURN>
